tenants: remove route to list for a user
